kubernetes/99-argocd/13-unsend/unsend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unsend
  namespace: six-degrees-apps
spec:
  selector:
    matchLabels:
      app: unsend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: unsend
    spec:
      containers:
      - name: unsend
        image: unsend/unsend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
