kubernetes/99-argocd/13-unsend/smtp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unsend-smtp-server
  namespace: six-degrees-apps
spec:
  selector:
    app: unsend-smtp-server
  ports:
  - name: smtp
    port: 25
    targetPort: 25
    protocol: TCP
  - name: smtp-submission
    port: 587
    targetPort: 587
    protocol: TCP
  - name: smtp-alt
    port: 2587
    targetPort: 2587
    protocol: TCP
  - name: smtps
    port: 465
    targetPort: 465
    protocol: TCP
  - name: smtps-alt
    port: 2465
    targetPort: 2465
    protocol: TCP
  type: ClusterIP
