kubernetes/99-argocd/13-unsend/unsend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unsend-service
  namespace: six-degrees-apps
spec:
  type: ClusterIP
  ports:
  - name: api
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: unsend
