kubernetes/99-argocd/13-unsend/smtp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unsend-smtp-server
  namespace: six-degrees-apps
  annotations:
    nginx.ingress.kubernetes.io/tcp-services-configmap: "six-degrees-apps/smtp-tcp-services"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: smtp.unsend.6degrees.com.sa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unsend-smtp-server
            port:
              number: 587
