kubernetes/99-argocd/13-unsend/unsend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unsend
  namespace: six-degrees-apps
  annotations:
    cert-manager.io/cluster-issuer: http01-clusterissuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - unsend.6degrees.com.sa
      secretName: unsend-tls
  rules:
    - host: unsend.6degrees.com.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unsend-service
                port:
                  number: 3000
